fix home player on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media only screen and (max-width: 1024px) {
+  .react-responsive-modal-modal {
+    width: 90vw !important;
+    margin: 0 !important;
+    box-sizing: border-box;
+  }
+}
